# PoliteShutdown

./: CMakeLists.txt  PoliteShutdown.adm  README.md  example registry settings.reg
src/: DefaultSettings.h  EasyWin.cpp  EasyWin.h  EasyWinPrivilege.cpp  EasyWinPrivilege.h  EasyWinReg.cpp  EasyWinReg.h  EasyWinSID.cpp  EasyWinSID.h  EasyWinShutdown.cpp  EasyWinShutdown.h  EasyWinSync.cpp  EasyWinSync.h  EasyWinTasks.cpp  EasyWinTasks.h  LoggedOnUsers.cpp  LoggedOnUsers.h  Logger.cpp  Logger.h  PoliteShutdown.cpp  PoliteShutdown.h  Processes.cpp  Processes.h  SettingsSource.cpp  SettingsSource.h  auto_handle.h  main.cpp  version.h  version.rc  winUpdate.cpp  winUpdate.h
